ha-cluster/app/foxids/foxids.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxids-deployment
  labels:
    app: foxids
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foxids
  template:
    metadata:
      labels:
        app: foxids
    spec:
      containers:
        - name: foxids
          #image: foxids/foxids:latest
          #image: foxids/foxids:2.3.6
          image: foxids/foxids:2.6.8-test
          imagePullPolicy: Always
          ports:
            - containerPort: 8800
          livenessProbe:
            httpGet:
              path: /health
              port: 8800
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8800
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxids-control-deployment
  labels:
    app: foxids-control
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foxids-control
  template:
    metadata:
      labels:
        app: foxids-control
    spec:
      containers:
        - name: foxids-control
          #image: foxids/foxids-control:latest
          #image: foxids/foxids-control:2.3.6
          image: foxids/foxids-control:2.6.8-test
          imagePullPolicy: Always
          ports:
            - containerPort: 8800
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8800
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8800
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: foxids
spec:
  ports:
    - port: 8800
      targetPort: 8800
      protocol: TCP
  type: ClusterIP
  selector:
    app: foxids
---
apiVersion: v1
kind: Service
metadata:
  name: foxids-control
spec:
  ports:
    - port: 8800
      targetPort: 8800
      protocol: TCP
  type: ClusterIP
  selector:
    app: foxids-control
